--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ starlette-context = "^0.3.6"
 uvicorn = "^0.24.0.post1"
 python-decouple = "^3.8"
 fastapi-jwt = "^0.2.0"
+fastapi-utilities = "^0.1.3.1"
 
 
 [build-system]
