--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ uvicorn = "^0.24.0.post1"
 python-decouple = "^3.8"
 fastapi-jwt = "^0.2.0"
 fastapi-utilities = "^0.1.3.1"
+feedparser = "^6.0.10"
 
 
 [build-system]
