--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ python-decouple = "^3.8"
 fastapi-jwt = "^0.2.0"
 fastapi-utilities = "^0.1.3.1"
 feedparser = "^6.0.10"
+unidecode = "^1.3.7"
+lxml = "^4.9.3"
 
 
 [build-system]
