--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ fastapi-utilities = "^0.1.3.1"
 feedparser = "^6.0.10"
 unidecode = "^1.3.7"
 lxml = "^4.9.3"
+openpyxl = "^3.1.2"
 
 
 [build-system]
