--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ feedparser = "^6.0.10"
 unidecode = "^1.3.7"
 lxml = "^4.9.3"
 openpyxl = "^3.1.2"
+folkd = {git = "git@gitlab.com:imleme/folkd_post.git"}
 
 
 [build-system]
