--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             ],
             "justMyCode": false,
             "env": {
-                "MONGO_URI": "mongodb://admin:Z!u2UjbHRvgY-#u@api.enesdogan.dev/imleme?authSource=admin",
+                "MONGO_URI": "mongodb://imleme-user:Z!u2UjbHRvgY-#u@api.enesdogan.dev:3691/imleme",
                 "POST_INT": "30000"
             }
         },
