--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,8 @@
             "args": [
                 "app.app:app",
                 "--reload",
+                "--log-level",
+                "debug",
             ],
             "justMyCode": false,
             "env": {
