--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: imleme_mmg
     environment:
       - POST_INT=300
-      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_nano
+      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_mmg
     networks:
       - seo
     working_dir: /code
@@ -27,7 +27,7 @@ services:
     container_name: imleme_hak
     environment:
       - POST_INT=300
-      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_nano
+      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_hak
     networks:
       - seo
     working_dir: /code
@@ -49,7 +49,7 @@ services:
     container_name: imleme_ali
     environment:
       - POST_INT=300
-      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_nano
+      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_ali
     networks:
       - seo
     working_dir: /code
@@ -93,7 +93,7 @@ services:
     container_name: imleme_verilink
     environment:
       - POST_INT=300
-      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_nano
+      - MONGO_URI=mongodb://imleme_user:1mlemeXXX*@host.docker.internal:27017/imleme_verilink
     networks:
       - seo
     working_dir: /code
